--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,9 +2,11 @@ homepage: "https://secureprivacy.ai/"
 documentation: "https://support.secureprivacy.ai/support/solutions/articles/80000874877-how-to-install-secure-privacy-with-google-tag-manager-gtm-"
 versions:
   # Latest version
+  - sha: 7e61e92c3737e56f3304b0a81dda4170573bc16e
+    changeNotes: url_passthrough added
+    # Older versions
   - sha: 3588e56391c1f75750a69de02169020e2264363e
     changeNotes: Updated the Structure
-    # Older versions
   - sha: 6a987f8862cc5e7871e3ce73efa2b6d1bd4f5898
     changeNotes: Upgrade to consent mode v2
   - sha: 724d1ae25d76c67edb64d0890b8d1ea563ad1dec
