--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,9 +2,12 @@ homepage: "https://secureprivacy.ai/"
 documentation: "https://support.secureprivacy.ai/articles/235297-implementation-google-consent-mode-using-google-tag-manager-template"
 versions:
   # Latest version
+  
+  - sha: 8a3d667b5207d4c2cf5554528c8955081c8d9f81
+    changeNotes: default values added for params 
+  # Older versions
   - sha: 15431624deec3430ea4684edc7408700633a41b3
     changeNotes: docs update and logo changes 
-  # Older versions
   - sha: 38a510a726b3c43894a8d6ca83eb5b775162c263
     changeNotes: default wait_time parameter update
   - sha: 080cd5d7f388a49252fd203847f7852b79fc91ec
