--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,10 +2,11 @@ homepage: "https://secureprivacy.ai/"
 documentation: "https://support.secureprivacy.ai/articles/235297-implementation-google-consent-mode-using-google-tag-manager-template"
 versions:
   # Latest version
-  
+  - sha: 5a726c8d28416f8775dacb340580a8449f397a82
+    changeNotes: thumbnail update 
+  # Older versions
   - sha: 8a3d667b5207d4c2cf5554528c8955081c8d9f81
     changeNotes: default values added for params 
-  # Older versions
   - sha: 15431624deec3430ea4684edc7408700633a41b3
     changeNotes: docs update and logo changes 
   - sha: 38a510a726b3c43894a8d6ca83eb5b775162c263
