--- a/metadata.yaml
+++ b/metadata.yaml
@@ -2,9 +2,11 @@ homepage: "https://secureprivacy.ai/"
 documentation: "https://support.secureprivacy.ai/articles/235297-implementation-google-consent-mode-using-google-tag-manager-template"
 versions:
   # Latest version
+  - sha: ad324271e44b8081582d3ecd5a5333c530f1e949
+    changeNotes: Consent mode updates
+  # Older versions
   - sha: 8f4d5e4198e8776a20590063f124a85c090b6a56
     changeNotes: Bug fixes
-  # Older versions
   - sha: 5a726c8d28416f8775dacb340580a8449f397a82
     changeNotes: thumbnail update
   - sha: 8a3d667b5207d4c2cf5554528c8955081c8d9f81
